# fraiskm

./: Cargo.toml  README.md  package.json  sqlx-data.json
migrations/: 20211205170504_create_users.sql  20211205201808_create_people.sql  20211206160321_create_vehicle_types.sql  20211206170321_create_cars.sql  20211206170321_create_vehicles.sql  20211206172845_create_addresses.sql  20211206173249_create_drivers.sql  20211206182534_create_distances.sql  20211207132121_create_journeys.sql  20211208120016_create_scales.sql  20220424191301_add_2021_scales.sql  20220424191924_add_2022_scales.sql
src/: app.html  database.rs  graphql.js  main.rs  model.rs  mutation.js  mutation.rs  query.js  query.rs  server.rs  store.js  util.rs  validator.rs
src/components/: AddressModal.svelte  DriverModal.svelte  JourneyDuplicateModal.svelte  JourneyModal.svelte  PasswordModal.svelte  Transition.svelte  UsernameModal.svelte  VehicleModal.svelte
src/routes/: __layout.svelte  addresses.svelte  drivers.svelte  index.svelte  journeys.svelte  login.svelte  signin.svelte  signup.svelte  vehicles.svelte
