[package]
authors = ["Maxime Gauduin <alucryd@archlinux.org>"]
categories = []
description = "Calculateur de frais kilométriques"
edition = "2021"
exclude = ["test/"]
homepage = "https://github.com/alucryd/fraiskm"
keywords = []
license = "GPL-3.0+"
name = "fraiskm"
readme = "README.md"
repository = "https://github.com/alucryd/fraiskm"
version = "0.1.0-beta"

[dependencies]
async-graphql = { version = "3.0.12", features = [
    "dataloader",
    "uuid",
], default-features = false }
async-graphql-tide = "3.0.12"
async-redis-session = "0.2.2"
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.51"
base64 = "0.13.0"
blake3 = "1.2.0"
clap = "2.34.0"
dotenv = "0.15.0"
http-types = "2.12.0"
rayon = "1.5.1"
ring = "0.16.20"
rust-embed = { version = "6.3.0", features = ["compression"] }
serde = { version = "1.0.130", features = ["derive"] }
simple-error = "0.2.3"
sqlx = { version = "0.5.9", features = [
    "migrate",
    "offline",
    "postgres",
    "runtime-async-std-native-tls",
    "uuid",
] }
surf = { version = "2.3.2", features = ["h1-client"], default-features = false }
tide = { version = "0.16.0", features = [
    "h1-server",
    "sessions",
], default-features = false }
tindercrypt = { version = "0.3.2", default-features = false }
uuid = { version = "0.8.2", features = ["v4"] }
zip = { version = "0.5.13", features = ["deflate"], default-features = false }

[target.'cfg(target_arch = "aarch64")'.dependencies]
native-tls = { version = "0.2.8", features = ["vendored"] }

[dev-dependencies]
serde_json = "1.0.72"
wiremock = "0.5.8"

[[bin]]
name = "fraiskm"
path = "src/main.rs"
